# TestProject_CMakeDemo

./: .gitignore  CMakeLists.txt  README.md  build.sh
application/: main.c
application/modules/: CMakeLists.txt
application/modules/displayTemp/: CMakeLists.txt
application/modules/displayTemp/inc/: displayTemp.h
application/modules/displayTemp/src/: displayTemp.c
application/modules/procTemp/: CMakeLists.txt
application/modules/procTemp/inc/: procTemp.h
application/modules/procTemp/src/: procTemp.c
application/modules/readTemp/: CMakeLists.txt
application/modules/readTemp/inc/: readTemp.h
application/modules/readTemp/src/: readTemp.c
board/syscalls/: syscalls.c
board/toolchain/: toolchain.cmake
